Wrapped address in small tags/elements to prevent linebreak on small devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -679,6 +679,10 @@ span.badge:hover {
     white-space: normal;
 }
 
+.overflow-break {
+    overflow-wrap: break-word;
+}
+
 
 
 /* -------------------------------- Media Queries -----------------*/
